--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         <div class="row">
           <div class="col-sm-12 col-md-12 col-lg-6">
             <p class="text6 ">Keep in touch <br> with your groups</p>
-            <p class="text7">Whether it's planning an outing with friends or simply <br> staying on top of your family chats, group conversations <br> should feel effortless.</p>
+            <p class="express">Whether it's planning an outing with friends or simply <br> staying on top of your family chats, group conversations <br> should feel effortless.</p>
             <p><a class="learn" href="">Learn more <img class="ms-3" src="images/svgexport-28.svg" alt=""></a></p></div>
           
             <div class="col-sm-12 col-md-12 col-lg-6">
@@ -162,7 +162,7 @@
 
             <div class="col-sm-12 col-md-12 col-lg-6">
               <p class=" say text8 ms-2"> Say what <br> you feel</p>
-              <p class="text7 ms-2">Express yourself without words. Use stickers and GIFs or <br> share everyday moments on Status. Record a voice <br> message for a quick hello or a longer story.</p>
+              <p class="express ms-2">Express yourself without words. Use stickers and GIFs or <br> share everyday moments on Status. Record a voice <br> message for a quick hello or a longer story.</p>
               <p> <a class="learn ms-3" href="#">Learn more <img class="ms-3" src="images/svgexport-28.svg" alt=""></a></p>
             </div>
         </div>
@@ -172,7 +172,7 @@
   <div class="row">
     <div class="col-sm-12 col-md-12 col-lg-6">
       <p class=" transform ms-3">Transform <br> your business</p>
-      <p class=" business ms-3">WhatsApp Business helps you reach your customers <br> globally to deliver compelling experiences at scale. <br> Showcase your products and services, increase sales,<br> and build relationships all with WhatsApp.</p>
+      <p class=" express ms-3">WhatsApp Business helps you reach your customers <br> globally to deliver compelling experiences at scale. <br> Showcase your products and services, increase sales,<br> and build relationships all with WhatsApp.</p>
       <p><a class="learn ms-3" href="#">Learn more <img class="ms-3" src="images/svgexport-26.svg" alt=""></a></p>
     </div>
 
