--- a/index.html
+++ b/index.html
@@ -37,10 +37,7 @@
             id="offcanvasNavbar"
             aria-labelledby="offcanvasNavbarLabel"
           >
-            <!-- <div class="offcanvas-header">
-              <h5 class="offcanvas-title" id="offcanvasNavbarLabel">
-                Offcanvas
-              </h5> -->
+            
               <button
                 type="button"
                 class="btn-close"
@@ -103,7 +100,7 @@
          <div class="wait"><img style="width: 90%;" src="images/wait.png" alt=""></div>
         </div>
       </div>
-
+<!-- 
       <div class="data mb-2">* Data charges may apply. Contact your provider for details.</div>
       <div><img class="chat1" src="images/chat1.png" alt="">
       <img class="small" src="images/small screen img.png" alt=""></div>
@@ -180,7 +177,7 @@
       <img class="img1" src="images/catalogue.png" alt="">
     </div>
   </div>
-</div>
+</div> -->
    
 <!-- <div class="container1">
   <div class="row">
