--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
          <div class="wait"><img style="width: 90%;" src="images/wait.png" alt=""></div>
         </div>
       </div>
-<!-- 
+
       <div class="data mb-2">* Data charges may apply. Contact your provider for details.</div>
       <div><img class="chat1" src="images/chat1.png" alt="">
       <img class="small" src="images/small screen img.png" alt=""></div>
@@ -109,7 +109,7 @@
       <img class="small2" src="images/small2.png" alt=""></div>
 
 
-      <div class="all">
+       <div class="all">
       <div class="row p-4">
         <div class="col-sm-12 col-md-12 col-lg-6">
        <p class="text1 ">Never miss a <br> moment with<br>voice and video <br> calls</p>
@@ -120,7 +120,7 @@
        <div class="col-sm-12 col-md-12 col-lg-6 "><img class="img1 " src="images/hello.png" alt=""></div>
         </div>
       </div>
-    
+   
       <div class="container1 ">
         <div class="row">
            <div class="col-sm-12 col-md-12 col-lg-6"><img class=" img2 " src="images/message.png" alt=""></div> 
@@ -136,7 +136,7 @@
          </div>
       </div>
 
-      <div class="all">
+      <!-- <div class="all">
         <div class="row">
           <div class="col-sm-12 col-md-12 col-lg-6">
             <p class="text6 ">Keep in touch <br> with your groups</p>
@@ -177,7 +177,7 @@
       <img class="img1" src="images/catalogue.png" alt="">
     </div>
   </div>
-</div> -->
+</div>   -->
    
 <!-- <div class="container1">
   <div class="row">
@@ -218,7 +218,7 @@
   </div>
   </div>
   </div>
-</div> -->
+</div> 
 
 
 
@@ -234,7 +234,7 @@
 
 
 
-
+ -->
 
     </div>
     <script
