--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
          </div>
       </div>
 
-      <!-- <div class="all">
+       <div class="all">
         <div class="row">
           <div class="col-sm-12 col-md-12 col-lg-6">
             <p class="text6 ">Keep in touch <br> with your groups</p>
@@ -145,12 +145,12 @@
           
             <div class="col-sm-12 col-md-12 col-lg-6">
               <div class="wallpaper"><img src="images/wallpaper.png" alt=""></div>
-              <div class="family"><img style="width: 90%;" src="images/family.png" alt=""></div>
+              <div class="family"><img style="width: 350px;" src="images/family.png" alt=""></div>
             </div>
         </div>
       </div>
 
-      <div class="all">
+      <!-- <div class="all">
         <div class="row">
           <div class="col-sm-12 col-md-12 col-lg-6">
            <div class="laugh ms-5"> <img style="margin-left:50px;" src="images/laugh.png" alt=""></div>
@@ -177,48 +177,17 @@
       <img class="img1" src="images/catalogue.png" alt="">
     </div>
   </div>
-</div>   -->
+</div>    -->
+
    
-<!-- <div class="container1">
-  <div class="row">
-<div style="margin-left: 150px;">
-     <div class="col-sm-12 col-md-12 col-lg-2"><img style="width: 30%; margin-top: 150px;" src="images/white.png" alt=""></div>
-   <div class="mt-5 col-sm-12 col-md-12 col-lg-3"><a class="last" href="#">Download</a> </div> 
-   
-   <div s class="d-flex">
-     <div class="col-sm-12 col-md-12 col-lg-2"> 
-      <p class="text-white">What we do</p>
-      <p><a class="text-white" href="#">Features</a></p>
-      <p><a  class="text-white" href="#">Blog</a> </p>
-     <p> <a  class="text-white" href="#">Security</a> </p>
-     <p> <a  class="text-white" href="#">For Business</a> </p>
-    </div>
+  
 
 
 
 
 
-    <div class="">
-   <p  class="text-white">Who we are</p>
-   <p><a  class="text-white" href="#">About us</a></p>
-   <p><a  class="text-white" href="#">Careers</a></p>
-   <p><a  class="text-white" href="#">Brand Center</a></p>
-   <p><a  class="text-white" href="#">Privacy</a></p>
    
 
-    </div>
-    
-
-
-
-
-    <div class=""></div>
-    <div class=""></div>
-
-  </div>
-  </div>
-  </div>
-</div> 
 
 
 
@@ -233,8 +202,7 @@
 
 
 
-
- -->
+ 
 
     </div>
     <script
