--- a/index.html
+++ b/index.html
@@ -145,19 +145,19 @@
           
             <div class="col-sm-12 col-md-12 col-lg-6">
               <div class="wallpaper"><img src="images/wallpaper.png" alt=""></div>
-              <div class="family"><img style="width: 350px;" src="images/family.png" alt=""></div>
+              <div class="family"><img style="width: 320px;" src="images/family.png" alt=""></div>
             </div>
         </div>
       </div>
 
-      <!-- <div class="all">
+       <div class="all">
         <div class="row">
           <div class="col-sm-12 col-md-12 col-lg-6">
-           <div class="laugh ms-5"> <img style="margin-left:50px;" src="images/laugh.png" alt=""></div>
-           <div class="beach"> <img style="width: 60%;" src="images/beach.png" alt=""></div>
+           <div class="laugh ms-5"> <img src="images/laugh.png" alt=""></div>
+           <div class="beach"> <img style="width:250px;" src="images/beach.png" alt=""></div>
           </div>
 
-            <div class="col-sm-12 col-md-12 col-lg-6">
+             <!-- <div class="col-sm-12 col-md-12 col-lg-6">
               <p class=" say text8 ms-2"> Say what <br> you feel</p>
               <p class="express ms-2">Express yourself without words. Use stickers and GIFs or <br> share everyday moments on Status. Record a voice <br> message for a quick hello or a longer story.</p>
               <p> <a class="learn ms-3" href="#">Learn more <img class="ms-3" src="images/svgexport-28.svg" alt=""></a></p>
@@ -165,7 +165,7 @@
         </div>
       </div>
 
-<div class="all">
+<div class="all">  
   <div class="row">
     <div class="col-sm-12 col-md-12 col-lg-6">
       <p class=" transform ms-3">Transform <br> your business</p>
@@ -177,7 +177,7 @@
       <img class="img1" src="images/catalogue.png" alt="">
     </div>
   </div>
-</div>    -->
+</div>     -->
 
    
   
