--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
        <div class="all">
         <div class="row">
           <div class="col-sm-12 col-md-12 col-lg-6">
-           <div class="laugh ms-5"> <img src="images/laugh.png" alt=""></div>
-           <div class="beach"> <img style="width:150px;" src="images/beach.png" alt=""></div>
+           <div class="laugh ms-5"> <img style="width: 300px;" src="images/laugh.png" alt=""></div>
+           <div class="beach"> <img style="width:220px;" src="images/beach.png" alt=""></div>
           </div>
 
              <!-- <div class="col-sm-12 col-md-12 col-lg-6">
