--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
             <p><a class="learn" href="">Learn more <img class="ms-3" src="images/svgexport-28.svg" alt=""></a></p></div>
           
             <div class="col-sm-12 col-md-12 col-lg-6">
-              <div class="wallpaper"><img src="images/wallpaper.png" alt=""></div>
-              <div class="family"><img style="width: 320px;" src="images/family.png" alt=""></div>
+              <div class="wallpaper"><img style="width: 300px;" src="images/wallpaper.png" alt=""></div>
+              <div class="family"><img style="width: 225px;" src="images/family.png" alt=""></div>
             </div>
         </div>
       </div>
@@ -154,10 +154,10 @@
         <div class="row">
           <div class="col-sm-12 col-md-12 col-lg-6">
            <div class="laugh ms-5"> <img style="width: 300px;" src="images/laugh.png" alt=""></div>
-           <div class="beach"> <img style="width:220px;" src="images/beach.png" alt=""></div>
+           <div class="beach"> <img style="width:200px;" src="images/beach.png" alt=""></div>
           </div>
 
-             <!-- <div class="col-sm-12 col-md-12 col-lg-6">
+              <div class="col-sm-12 col-md-12 col-lg-6">
               <p class=" say text8 ms-2"> Say what <br> you feel</p>
               <p class="express ms-2">Express yourself without words. Use stickers and GIFs or <br> share everyday moments on Status. Record a voice <br> message for a quick hello or a longer story.</p>
               <p> <a class="learn ms-3" href="#">Learn more <img class="ms-3" src="images/svgexport-28.svg" alt=""></a></p>
@@ -174,10 +174,10 @@
     </div>
 
     <div class="col-sm-12 col-md-12 col-lg-6">
-      <img class="img1" src="images/catalogue.png" alt="">
+      <img class="catalog" style="width: 280px;" src="images/catalogue.png" alt=""> 
     </div>
   </div>
-</div>     -->
+</div>    
 
    
   
