--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
        <p class="text2 ">From a group call to classmates to a quick call with mom,<br> feel like you're in the same room with voice and video <br> calls.</p>
       <p> <a class="learn" href="#">Learn more <img class="ms-2" src="images/svgexport-28.svg" alt=""></a> </p></div>
        
-       <div class="col-sm-12 col-md-12 col-lg-6 "><img class="img1 " src="images/hello.png" alt=""></div>
+       <div class="col-sm-12 col-md-12 col-lg-6 "><img style="margin-left: 28px;" class="img1 " src="images/hello.png" alt=""></div>
         </div>
       </div>
    
@@ -145,7 +145,7 @@
           
             <div class="col-sm-12 col-md-12 col-lg-6">
               <div class="wallpaper"><img style="width: 300px;" src="images/wallpaper.png" alt=""></div>
-              <div class="family"><img style="width: 225px;" src="images/family.png" alt=""></div>
+              <div class="family"><img style="width: 250px; margin-left: 70px;" src="images/family.png" alt=""></div>
             </div>
         </div>
       </div>
@@ -153,8 +153,8 @@
        <div class="all">
         <div class="row">
           <div class="col-sm-12 col-md-12 col-lg-6">
-           <div class="laugh ms-5"> <img style="width: 300px;" src="images/laugh.png" alt=""></div>
-           <div class="beach"> <img style="width:200px;" src="images/beach.png" alt=""></div>
+           <div class="laugh ms-5"> <img src="images/laugh.png" alt=""></div>
+           <div class="beach"> <img style="width:200px;" src="images/beach.png" alt=""></div> 
           </div>
 
               <div class="col-sm-12 col-md-12 col-lg-6">
