--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
             <p><a class="learn" href="">Learn more <img class="ms-3" src="images/svgexport-28.svg" alt=""></a></p></div>
           
             <div class="col-sm-12 col-md-12 col-lg-6">
-              <div class="wallpaper"><img style="width: 300px;" src="images/wallpaper.png" alt=""></div>
-              <div class="family"><img style="width: 250px; margin-left: 70px;" src="images/family.png" alt=""></div>
+              <div class="wallpaper"><img style="width: 300px; margin-left: 20px;" src="images/wallpaper.png" alt=""></div>
+              <div class="family"><img style="width: 200px; margin-left: 70px;" src="images/family.png" alt=""></div>
             </div>
         </div>
       </div>
@@ -154,7 +154,7 @@
         <div class="row">
           <div class="col-sm-12 col-md-12 col-lg-6">
            <div class="laugh ms-5"> <img src="images/laugh.png" alt=""></div>
-           <div class="beach"> <img style="width:200px;" src="images/beach.png" alt=""></div> 
+           <div class="beach"> <img style="width:150px;" src="images/beach.png" alt=""></div> 
           </div>
 
               <div class="col-sm-12 col-md-12 col-lg-6">
